# 7J-fy-9-

./: .gitignore  README.md  meson.build
databases/: example.graph  example.graph copy  example.graph copy2  example.graph copy3  example.graph copy4  example.graph copy5  example.graph copy6
include/: someutils.h
models/: Graph with separated node, edge.glb  Idea_man_dem.blend1  Idea_man_dem.fbx  Idea_man_dem.glb  Sarah Dsouza's triangle font.fbx  Sarah Dsouza's triangle font.glb  flower_f.glb  fonts.blend  fonts.blend1  general project ideas.fbx  graph visual ideas.blend  numbers triangle font.fbx  numbers triangle font.glb  nums.h  ru tri font.fbx  ru tri font.glb  tree_var_2.glb
src/: db_parser.c  db_runner.c  db_server.c  draftdbrun.c  graphics.c  graphics_gl.c  graphics_vlk.c  graphs.txt  jit_code.c  meson.build  node_positioning.c  shared.h  supervisor.c  ui_logic.c
subprojects/: cglm.wrap
texts/: general structure.txt  graphs.txt  random ideas.txt
