graphics = build_target('graphics_gl',
	'graphics_gl.c',
	target_type: 'executable',
	include_directories: inc,
	dependencies: [dep_dlg, dep_swa, dep_gl, dep_m])

# ui_logic = build_target('ui_logic',
# 	'ui_logic.c',
# 	target_type: 'executable',
# 	dependencies: [])

db_server = build_target('db_server',
	'db_server.c',
	target_type: 'executable',
	include_directories: inc,
	dependencies: [dep_dlg])

db_runner = build_target('db_runner',
	'db_runner.c',
	target_type: 'executable',
	include_directories: inc,
	dependencies: [])
